[project]
name = "call-me-maybe"
version = "0.1.0"
description = "Function calling with constrained decoding for LLMs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pydantic",
    "torch",
	"transformers",
	"huggingface_hub",
	"accelerate"
]

[dependency-groups]
dev = [
    "flake8",
    "mypy",
    "types-requests",
    "pandas-stubs"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
